--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,10 +19,10 @@
 </style>
 
 <!-- Map Div -->
-<div>
+<nav>
   <a routerLink="esri-map">Map</a>
   <a routerLink="other">Other Page</a>
-</div>
+</nav>
 <router-outlet></router-outlet>
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
